--- a/Laboratorio 1/index.html
+++ b/Laboratorio 1/index.html
@@ -37,11 +37,9 @@
             <li>¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</li>
             <sub>Ahora HTML esta enfocado exclusivamente a la estructura y contenido de la pagina y si se quiere mejorar la presentacion se utiliza CSS</sub>
             <li>¿Qué componentes de estructura y estilo tiene una tabla?</li>
-            <sub></sub>
-            <li>¿Cuáles son los principales controles de una forma HTML5?</li>
+            <sub>tag table, tr (table row), td(table data). </sub>
             <li>¿Qué tanto soporte HTML5 tiene el navegador que utilizas? Puedes utilizar la siguiente página para descubrirlo: http://html5test.com/ (Al responder la pregunta recuerda poner el navegador que utilizas)</li>
-            <li>¿Cuál es el ciclo de vida de los sistemas de información?</li>
-            <li>¿Cuál es el ciclo de desarrollo de sistemas de información?</li>
+            <sub>El navegador que utilizo, Chrome, soporta 476 elementos</sub>
         </ul>
     </body>
     <footer>
